--- a/app/src/main/res/layout/activity_breed_information.xml
+++ b/app/src/main/res/layout/activity_breed_information.xml
@@ -1,183 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.LinearLayoutCompat
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <!--Hold Breed Name and Breed Description-->
     <LinearLayout
-        android:layout_weight="50"
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:layout_height="0dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/breed_name_textview"
+
+        <!--Hold Breed Name and Breed Description-->
+        <LinearLayout
+            android:layout_weight="45"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:gravity="center"
-            tools:text="Name of Breed"/>
+            android:orientation="vertical"
+            android:layout_height="0dp">
+
+            <TextView
+                android:id="@+id/breed_name_textview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="40sp"
+                android:gravity="center"
+                tools:text="Name of Breed"/>
+
+            <ImageView
+                android:id="@+id/breed_imageview"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
+                android:paddingBottom="15dp"
+                android:paddingTop="15dp"
+                android:scaleType="centerCrop"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+        </LinearLayout>
+        <!--END of Hold Breed Name and Breed Description-->
 
         <TextView
             android:id="@+id/breed_info_textview"
+            android:layout_weight="25"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:gravity="center"/>
+
+        <ListView
+            android:id="@+id/breed_characteristic_list"
+            android:stackFromBottom="false"
+            android:layout_weight="25"
+            android:layout_width="match_parent"
+            android:layout_height="0dp">
+        </ListView>
+
+        <!--Filler-->
+        <TextView
+            android:layout_weight="5"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"/>
+
     </LinearLayout>
-    <!--END of Hold Breed Name and Breed Description-->
 
-    <ListView
-        android:id="@+id/breed_characteristic_list"
-        android:stackFromBottom="false"
-        android:layout_weight="50"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
-    </ListView>
-
-    <!--<LinearLayout-->
-        <!--android:layout_weight="25"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_height="0dp">-->
-
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/affection_text_view"-->
-                <!--android:text="@string/affection"/>-->
-
-            <!--<android.support.v7.widget.AppCompatSeekBar-->
-                <!--android:id="@+id/rating_bar_affection"-->
-                <!--android:max="5"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/energy_text_view"-->
-                <!--android:text="@string/energy"/>-->
-
-                <!--<android.support.v7.widget.AppCompatSeekBar-->
-                    <!--android:id="@+id/rating_bar_energy"-->
-                    <!--android:max="5"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="wrap_content"/>-->
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="wrap_content">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/friendliness_text_view"-->
-                <!--android:text="@string/friendliness"/>-->
-
-            <!--<android.support.v7.widget.AppCompatSeekBar-->
-                <!--android:id="@+id/rating_bar_friendliness"-->
-                <!--android:max="5"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-    <!--</LinearLayout>-->
-
-    <!--<LinearLayout-->
-        <!--android:layout_weight="25"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:layout_height="0dp">-->
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:id="@+id/grooming_text_view"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:text="@string/grooming"/>-->
-
-            <!--<android.support.v7.widget.AppCompatSeekBar-->
-                <!--android:id="@+id/rating_bar_grooming"-->
-                <!--android:max="5"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/length_text_view"-->
-                <!--android:text="@string/fur_length"/>-->
-
-            <!--<android.support.v7.widget.AppCompatSeekBar-->
-                <!--android:id="@+id/rating_bar_length"-->
-                <!--android:max="5"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-
-        <!--<android.support.v7.widget.LinearLayoutCompat-->
-            <!--android:orientation="vertical"-->
-            <!--android:layout_weight="3"-->
-            <!--android:layout_width="0dp"-->
-            <!--android:layout_height="match_parent">-->
-
-            <!--<TextView-->
-                <!--android:textAlignment="center"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:id="@+id/training_text_view"-->
-                <!--android:text="@string/training"/>-->
-
-            <!--<android.support.v7.widget.AppCompatSeekBar-->
-                <!--android:id="@+id/rating_bar_training"-->
-                <!--android:max="5"-->
-                <!--android:layout_width="match_parent"-->
-                <!--android:layout_height="wrap_content"/>-->
-
-        <!--</android.support.v7.widget.LinearLayoutCompat>-->
-    <!--</LinearLayout>-->
-
-</android.support.v7.widget.LinearLayoutCompat>
+</ScrollView>
