--- a/app/src/main/res/layout/activity_breed_information.xml
+++ b/app/src/main/res/layout/activity_breed_information.xml
@@ -1,69 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+<LinearLayout
+    android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <ScrollView
+        android:layout_weight="80"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <!--Hold Breed Name and Breed Description-->
+        android:layout_height="match_parent">
         <LinearLayout
-            android:layout_weight="45"
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="0dp">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <!--Hold Breed Name and Breed Description-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:orientation="vertical"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/breed_name_textview"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+                    android:gravity="center"
+                    tools:text="Name of Breed"/>
+
+                <ImageView
+                    android:id="@+id/breed_imageview"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:scaleType="fitXY"
+                    android:layout_gravity="center"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"/>
+
+            </LinearLayout>
+            <!--END of Hold Breed Name and Breed Description-->
 
             <TextView
-                android:id="@+id/breed_name_textview"
+                android:id="@+id/breed_info_textview"
                 android:layout_width="match_parent"
+                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
-                android:gravity="center"
-                tools:text="Name of Breed"/>
-
-            <ImageView
-                android:id="@+id/breed_imageview"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:paddingRight="15dp"
-                android:paddingLeft="15dp"
-                android:paddingBottom="15dp"
-                android:paddingTop="15dp"
-                android:scaleType="centerCrop"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:gravity="center"/>
         </LinearLayout>
-        <!--END of Hold Breed Name and Breed Description-->
-
-        <TextView
-            android:id="@+id/breed_info_textview"
-            android:layout_weight="30"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:gravity="center"/>
-
-        <ListView
-            android:id="@+id/breed_characteristic_list"
-            android:stackFromBottom="false"
-            android:layout_weight="20"
-            android:layout_width="match_parent"
-            android:layout_height="0dp">
-        </ListView>
-
-        <!--Filler-->
-        <TextView
-            android:layout_weight="2"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"/>
-
-    </LinearLayout>
-
-</ScrollView>
+    </ScrollView>
+    <ListView
+        android:id="@+id/breed_characteristic_list"
+        android:stackFromBottom="false"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
+</LinearLayout>
