--- a/app/src/main/res/layout/activity_breed_information.xml
+++ b/app/src/main/res/layout/activity_breed_information.xml
@@ -4,16 +4,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/gold"
+    >
 
     <ScrollView
         android:layout_weight="80"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbarThumbVertical="@drawable/scrollbar"
+        android:scrollbarSize="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
 
             <!--Hold Breed Name and Breed Description-->
             <LinearLayout
@@ -27,16 +32,18 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                     android:gravity="center"
-                    tools:text="Name of Breed"/>
+                    tools:text="Name of Breed"
+                    android:textColor="#e6e6e6"
+                    />
 
                 <ImageView
                     android:id="@+id/breed_imageview"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:scaleType="fitXY"
+                    android:layout_width="267dp"
+                    android:layout_height="267dp"
                     android:layout_gravity="center"
-                    android:layout_width="300dp"
-                    android:layout_height="300dp"/>
+                    android:scaleType="fitCenter" />
 
             </LinearLayout>
             <!--END of Hold Breed Name and Breed Description-->
@@ -48,7 +55,9 @@
                 android:layout_height="wrap_content"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
-                android:gravity="center"/>
+                android:gravity="center"
+                android:textColor="#e6e6e6"
+                />
         </LinearLayout>
     </ScrollView>
     <ListView
