--- a/app/src/main/res/layout/breed_characteristic_item.xml
+++ b/app/src/main/res/layout/breed_characteristic_item.xml
@@ -18,14 +18,16 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/character_name_text_view"
-            tools:text="Friendliness Towards Strangers: "/>
+            tools:text="Friendliness Towards Strangers: "
+            android:textColor="#B0B0B0"/>
 
         <TextView
             android:textAlignment="textStart"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/character_number_text_view"
-            android:text="5"/>
+            android:text="5"
+            android:textColor="#B0B0B0"/>
 
     </android.support.v7.widget.LinearLayoutCompat>
 
@@ -41,7 +43,8 @@
             android:max="5"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:progress="3"/>
+            android:progress="3"
+            android:thumbTint="#ff4081" />
         <TextView
             android:layout_weight="5"
             android:layout_width="0dp"
