--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.LinearLayoutCompat
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/cat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context="com.application.team480.kitty_pokedex.MainActivity">
-    <ImageView
+
+    <android.support.v7.widget.LinearLayoutCompat
+        android:layout_weight="6"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/cat" />
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        android:gravity="center">
 
-    <Button
-        android:id="@+id/Camera"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="99dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginTop="88dp"
-        android:background="@drawable/button_background"
+        <Button
+            android:id="@+id/Camera"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="99dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_background"
 
-        android:text="Camera"
-        android:textColorLink="@color/colorPrimary"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:text="@string/camera"
+            android:textColorLink="@color/colorPrimary"
+            android:visibility="visible"/>
 
-    <Button
-        android:id="@+id/Gallery"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="99dp"
-        android:layout_height="45dp"
-        android:layout_marginEnd="156dp"
-        android:layout_marginTop="144dp"
-        android:background="@drawable/button_background"
-        android:text="Gallery"
-        android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        <Button
+            android:id="@+id/Gallery"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="99dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/button_background"
+            android:text="@string/gallery"
+            android:visibility="visible"/>
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/Credits"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:layout_width="99dp"
+            android:layout_height="45dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/button_background"
+            android:text="@string/credits"
+            android:visibility="visible"/>
+
+    </android.support.v7.widget.LinearLayoutCompat>
+
+    <TextView
+        android:layout_weight="4"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
+
+</android.support.v7.widget.LinearLayoutCompat>
